# article-analyzer

./: curl-test.yaml  docker-compose.yml
.github/workflows/: test-impersonation.yml
backend/: Dockerfile  main.py  pyproject.toml  requirement.in  requirements.txt
backend/routes/: ingest.py  retrieval.py
backend/services/: extract_metadata.py  extract_text.py  get_summary_and_topic.py
backend/storage/: store_submission.py
frontend/: Dockerfile  app.py  pyproject.toml  requirement.in
frontend/.streamlit/: config.toml
frontend/components/: article_card.py
k8s/: backend-deployment.yaml  frontend-deployment.yaml  frontend-service.yaml
k8s/cloud/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml
k8s/local/: backend-deployment.yaml  backend-service.yaml  cilium-bgp-peering-policy.yaml  frontend-deployment.yaml  frontend-service.yaml
test/: ingestion_test.py  retrieval_test.py
