[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "beautifulsoup4==4.14.2",
    "cachetools==5.5.2",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "colorama==0.4.6",
    "fastapi==0.118.3",
    "feedparser==6.0.12",
    "filelock==3.20.0",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-core==2.4.3",
    "google-cloud-language==2.17.2",
    "google-cloud-storage==3.3.0",
    "google-crc32c==1.7.1",
    "google-genai==1.31.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.75.1",
    "grpcio-status==1.75.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "joblib==1.5.2",
    "lxml==6.0.2",
    "lxml-html-clean==0.4.2",
    "newspaper4k==0.9.3.1",
    "nltk==3.9.2",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "pluggy==1.6.0",
    "proto-plus==1.26.1",
    "protobuf==6.32.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "regex==2025.9.18",
    "requests==2.32.5",
    "requests-file==2.1.0",
    "rsa==4.9.1",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "starlette==0.48.0",
    "tenacity==9.1.2",
    "tldextract==5.3.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.37.0",
    "websockets==15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
